--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>p5.js example</title>
+  <title>cosmos.io</title>
   <style>
     body {
       padding: 0;
@@ -12,7 +12,10 @@
       background-color: #1b1b1b;
     }
   </style>
-  <script src="../p5.js"></script>
+  <script src="p5.js"></script>
+  <script src="world.js"></script>
+  <script src="bullet.js"></script>
+  <script src="ship.js"></script>
   <script src="sketch.js"></script>
 </head>
 
